# libbinbuf

./: .travis.yml  CMakeLists.txt  README.md
binbuf/: Buffer.cc  Buffer.hh  Config.hh.in  FileContainer.hh  MMapFileContainer.cc  MMapFileContainer.hh  StreamFileContainer.cc  StreamFileContainer.hh
binbuf/internal/: Chunk.hh  ManagedChunk.hh
binfmt/: Buffer.cc  Buffer.hh  Config.hh  Config.hh.in  FileContainer.hh  MMapFileContainer.cc  MMapFileContainer.hh  StreamFileContainer.cc  StreamFileContainer.hh
binfmt/internal/: Chunk.hh  ManagedChunk.hh
testdata/: strings  testfile
tests/: CMakeLists.txt  binbuf_test.cc  binfmt_test.cc  string_test.cc
